Fri Mar 13 00:51:37 PST 1998 Manish Singh <yosh@gimp.org>

	* app/color_picker.c: added display of hex triplets for HTML
	people

Thu Mar 12 18:51:09 PST 1998 Manish Singh <yosh@gimp.org>

        * app/gdisplay.c
	* app/by_color_select.c: Fix for indexed selection for multiple
	layers by Ben Jackson. Reenabled select by color for indexed
	images

Thu Mar 12 21:25:51 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/undo.c (undo_pop_layer_mod): Fixed a desynch bug when
	undoing "add alpha layer".

Thu Mar 12 22:52:47 1998  Tim Janik  <timj@gimp.org>

	* about_dialog.c:
	* app_procs.c:
	* brightness_contrast.c:
	* brush_select.c:
	* by_color_select.c:
	* channel_ops.c:
	* channels_dialog.c:
	* color_balance.c:
	* color_select.c:
	* commands.c:
	* convert.c:
	* curves.c:
	* fileops.c:
	* gdisplay_ops.c:
	* global_edit.c:
	* gradient.c:
	* histogram_tool.c:
	* hue_saturation.c:
	* indexed_palette.c:
	* info_dialog.c:
	* install.c:
	* interface.c:
	* layers_dialog.c:
	* levels.c:
	* main.c:
	* palette.c:
	* pattern_select.c:
	* posterize.c:
	* text_tool.c:
	* threshold.c:
	* tips_dialog.c:
	* tools.c:
	fixed a lot of the destroy handlers and delete_event handlers, still
 	not everything perfect, though.

Wed Mar 11 22:02:03 PST 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.20 release

Wed Mar 11 21:42:15 PST 1998 Manish Singh <yosh@gimp.org>

	* app/iscissors.c: another iscissors patch, don't know
	if it does any good though

Wed Mar 11 19:30:54 EST 1998 Adrian Likins <adrian@gimp.org>

	*docs/gimp.1: added gimp man page
		
	*app/gdisplay.c: disables by-color-select for indexed images

	*plugins/webbrowse/web-browser.scm: updated some urls

	*plugins/script-fu/sripts/circuit.scm: update for change in maze

Wed Mar 11 18:03:38 CST 1998 Larry Ewing  <lewing@gimp.org>

	* app/disp_callbacks.c: added checks to recreate the active tool
	if need be.
 
Wed Mar 11 02:49:14 PST 1998 Manish Singh <yosh@gimp.org>
