@@ -1,3 +1,9 @@
+Fri Mar 13 10:21:21 1998  Scott Goehring  <scott@poverty.bloomington.in.us>
+
+	* app/convert.c (generate_histogram_rgb): fixed buffer overrun in
+	convert.c correctly; the previous "fix" forced quantization when
+	it wasn't necessary in some cases (and made Adam very mad).
+
 Fri Mar 13 00:51:37 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* app/color_picker.c: added display of hex triplets for HTML
